# intelligence-silo

./: .gitignore  docker-compose.yml  init-db.sql
intelligence-silo/: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  cli.py  cloudbuild.yaml  pyproject.toml  train.py
intelligence-silo/.github/workflows/: ci.yml  deploy-on-main.yml
intelligence-silo/config/: silo.yaml
intelligence-silo/core/: __init__.py  api.py  drive_oauth.py  node.py  sources.py
intelligence-silo/core/bridge/: __init__.py  connector.py  weights_loader.py
intelligence-silo/core/google/: __init__.py  services.py
intelligence-silo/core/integration/: __init__.py  recorder.py  sync_daemon.py
intelligence-silo/core/intelligence/: __init__.py  dimensions.py
intelligence-silo/core/memory/: GCS_PERSISTENCE.md  __init__.py  embedder.py  episodic.py  gcs_sync.py  hierarchy.py  procedural.py  semantic.py  working.py
intelligence-silo/core/models/: __init__.py  matrix.py  router.py  slm.py
intelligence-silo/core/orchestrator/: __init__.py  mind.py  society.py
intelligence-silo/core/training/: __init__.py  data_generator.py  evaluator.py  pipeline.py  promotion.py  trainer.py  trigger.py
intelligence-silo/core/vault/: __init__.py  backup.py  vault.py
intelligence-silo/data/checkpoints/: training_report.json
intelligence-silo/docs/: AUTO_DEPLOY_SETUP.md
intelligence-silo/packaging/: __init__.py  builder.py
intelligence-silo/scripts/: ingest_docs.py
intelligence-silo/tests/: test_memory.py  test_models.py  test_society.py  test_sources.py  test_weights_loader.py
(+30 files in other folders)
